Adjust observer threshold for Windows OS, fix navbar font color on small screens, and improve tabs obstruction at high zoom.

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,7 @@ body {
   background-color: rgb(255, 255, 255);
   border: solid black 3rem;
   border-radius: 34px;
+  margin-top: 2%;
   // width: 90%;
   /// oprioginal 12.2 inches
   height: 6.7in; /// original 6.7 inch
